--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "BIMG",
-  "version": "1.0.0",
-  "description": "BIMG Site Resign",
-  "main": "server.js",
+  "name": "PIGARAGE",
+  "version": "0.0.1",
+  "description": "Raspberry Pi Remote Garage Door Opener",
+  "main": "server.py",
   "scripts": {
-    "test": "node server.js",
-    "start": "node server.js"
+    "test": "python server.py",
+    "start": "python server.py"
   },
   "repository": {
     "type": "git",
@@ -14,7 +14,7 @@
   "keywords": [
     "BIMG"
   ],
-  "author": "BIMG Developers",
+  "author": "Chris Burgin",
   "license": "ISC",
   "devDependencies": {
     "gulp": "^3.9.0",
