--- a/circle.yml
+++ b/circle.yml
@@ -9,4 +9,4 @@ dependencies:
     - pip install flask
     - pip install Flask-SQLAlchemy
     - sudo apt-get install python-dev
-    - sudo pip install pycrypto
+    - sudo pip install -H pycrypto
