--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "gulp-autoprefixer": "^2.3.0",
     "gulp-concat": "^2.6.0",
     "gulp-minify-css": "^1.1.0",
+    "gulp-myth": "^1.0.3",
     "gulp-rename": "^1.2.2"
   }
 }
