--- a/config.json
+++ b/config.json
@@ -1,1 +1,1 @@
-{"username": "admin", "ip": "127.0.0.1", "password": "default"}
+{"username": "admin", "ip": "127.0.0.1", "password": "default", "pinList": [4], "inputPin": 22}
